InternalUtils: removing deprecated Class.newInstance